# distillery

./: .clang-format  .envrc.example  .gitignore  .travis.yml  CMakeLists.txt  README.md  annotated.html  class_dummy-members.html  class_dummy.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  example_8h_source.html  files.html  functions.html  functions_func.html  index.html
.github/workflows/: ci.yml  formatter.yml
app/: main.cpp
cmake/: Doctest.cmake  FindSphinx.cmake  StaticAnalyzer.cmake  Warnings.cmake
docs/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  examples.rst  index.rst  requirements.txt  toc.rst
include/: example.h  pre-compiled-header.hh
include/gcc_4_7_2/program_analysis/block_validation_analysis/: block_validation_analysis.cpp  block_validation_analysis.hh  rtl_to_z3.hh  validation_context.hh
include/gcc_4_7_2/program_analysis/liveness_analysis/: liveness.hh  liveness_merge.cpp  liveness_rtl.cpp
include/gcc_4_7_2/specialization/: merge_cfg.cpp  rtl_specialization.cpp  rtl_specialization.hh
include/graph_abstractions/: block_interface.hh  cfg_interface.hh  merge_cfg.hh  statement_interface.hh
include/managers/: manager.cpp  manager.hh
include/program_analysis/: backward_analysis.hh  data_flow_object.hh  forward_analysis.hh  program_analysis.hh
include/utils/: exceptions.hh  logger.hh  profiler.hh
search/: all_0.js  functions_0.js
src/: example.cpp
tests/: CMakeLists.txt  dummy.cpp  dummy.hh  dummy_spl.cpp  dummy_spl.hh
